# fairticket

./: .gitignore  Anchor.toml  Cargo.toml  README.md  devnet_signatures.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.mjs
docs/: superteam-agentic-engineering-grant.md
migrations/: deploy.js
programs/secure_pass/: Cargo.toml
programs/secure_pass/src/: lib.rs
programs/securepass/: Cargo.toml
programs/securepass/src/: lib.rs
secure_pass/: Anchor.toml  README.md
secure_pass/programs/secure_pass/src/: lib.rs
secure_pass/tests/: secure_pass.ts
solana-release/: .crates2.json
src/: App.jsx  FairTicketApp.jsx  main.jsx  main.ts  polyfills.ts  styles.css
tests/: secure_pass.js  secure_pass.ts  securepass.ts
