[package]
name = "secure_pass"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "secure_pass"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
# ADD "anchor-spl/idl-build" HERE:
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"] 
anchor-debug = []
custom-heap = []
custom-panic = []

[dependencies]
anchor-lang = { workspace = true }
anchor-spl = { workspace = true, features = ["token_2022"] }

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }